# find_seed_btc_des165

./: README.eng.md  README.md  README.pt-BR.md  readme.md
docs/: 1-REQUISITOS.md  2-INSTALACAO_WINDOWS.md  3-INSTALACAO_LINUX.md  4-COMPILACAO.md  5-USO.md  6-TROUBLESHOOTING.md  CMakeLists.txt
docs/src/: bip39_utils.cpp  globals.hpp
docs/src/kernel/: bip39.hpp  common.cl  common.hpp  main.cl  sha256.hpp  sha512_hmac.hpp
src/: bip39_utils.hpp  bitcoin_utils.cpp  bitcoin_utils.hpp  globals.cpp  main.cpp  opencl_manager.cpp  opencl_manager.hpp
src/kernel/: bip39.cl  ec.cl  ec.hpp  sha256.cl  sha512_hmac.cl  utils.hpp
